# tensor_resnet-50_inference

./: README.md
resnet-50/: CMakeLists.txt  main.cc
resnet-50/base/: .base_context.h.swp  .swo  .swp  base_backend.h  base_context.h  proto_utils.cc  proto_utils.h
resnet-50/configs/: resnet-50.pt
resnet-50/engine/: trt_engine.cc  trt_engine.h
resnet-50/engine/configs/: resnet-50.pt
resnet-50/protos/: backend_param.proto  engine_param.proto
resnet-50/tensorrt/: trt_backend.cc  trt_backend.h  trt_common.h  trt_context.cc  trt_context.h
resnet-50/utils/: img_utils.cc  img_utils.h  net_utils.cc  net_utils.h  nv_logger.h  nv_utils.cc  nv_utils.h  proto_utils.cc  proto_utils.h
